oop_mro/tests/trybuild/fail_abstract_virtual_const.rs
use oop_mro::prelude::*;

oop_class! {
    abstract class Animal {
        abstract virtual const fn speak(&self) -> usize;
    }
}

fn main() {}
